[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytsk3"
version = "20260502"
description = "Python bindings for the SleuthKit"
authors = [
    { name = "Michael Cohen", email = "scudette@gmail.com" },
]
maintainers = [
    { name = "Joachim Metz", email = "joachim.metz@gmail.com" },
]
license = "Apache-2.0"
license-files = ["LICENSE", "sleuthkit/licenses/cpl1.0.txt", "sleuthkit/licenses/IBM-LICENSE"]
readme = {file = "README", content-type = "text/markdown"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
]
requires-python = ">=3.10"

[project.urls]
Documentation = "https://raw.githubusercontent.com/py4n6/pytsk/refs/heads/main/README"
Homepage = "https://github.com/py4n6/pytsk"
Repository = "https://github.com/py4n6/pytsk"

[tool.setuptools]
py-modules = ["_build"]

[[tool.setuptools.ext-modules]]
name = "pytsk3"
sources = []

[tool.setuptools.cmdclass]
build_ext = "_build.custom_build_ext"
