[metadata]
name = pytsk3
version = 20250801
description = Python bindings for the SleuthKit
long_description = Python bindings for the SleuthKit
author = Michael Cohen
author_email = scudette@gmail.com
maintainer = Joachim Metz
maintainer_email = joachim.metz@gmail.com
url = https://github.com/py4n6/pytsk
license = Apache License, Version 2.0
license_files = LICENSE sleuthkit/licenses/cpl1.0.txt sleuthkit/licenses/IBM-LICENSE
classifiers =
  Development Status :: 3 - Alpha
  Programming Language :: Python

[options]
python_requires = >=3.8
